# SegmentedBuffer

./: .clang-format  CMakeLists.txt  LICENSE  README.md
include/segmented_buffer/: segmented_buffer.hpp
tests/: CMakeLists.txt  segmented_buffer_test.cpp
